--- a/src/Component/Calendar/CalendarComponent.css
+++ b/src/Component/Calendar/CalendarComponent.css
@@ -54,3 +54,14 @@
 .modal-content::-webkit-scrollbar-track {
   background-color: #eee; /* Color of the scrollbar track */
 }
+
+.react-calendar__tile--active {
+  color: rgb(36, 149, 186);
+  font-size: 20px;
+  background-color: black;
+  border-radius: 50%;
+}
+
+.react-calendar__tile--active:hover {
+  color: black;
+}
